--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -228,7 +228,7 @@
       border: 2px solid #aca8c0;
       animation: bg 40s ease-in-out infinite;
       border-radius: 20px;
-      color: #ca2222;
+      color: #ffffff;
     }
 
     .bar1 input::placeholder {
