--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -667,13 +667,12 @@
 
   <!-- copyright -->
   <div class="footer-copyright">
-    <div class="website">
+    <!-- <div class="website">
       <a href="https://jkgblog.com" target="_blank" rel="noopener noreferrer">👨‍🦱Escher's Blog</a>
-    </div>
-    <div class="website">
-      <!-- <a id="donate">💰赞助💰</a> -->
+    </div> -->
+    <!-- <div class="website">
       <a href="https:///pay.jkgblog.com" id="donate" target="_blank">💰赞助💰</a>
-    </div>
+    </div> -->
     <div class="website">
       <a href="https://t.me/Jsproxy" target="_blank">📺TG@Jsproxy</a>
     </div>
