--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -629,9 +629,9 @@
       <li>www.youtube.com => youtube,yt,y</li>
       <li>www.wikipedia.org => wikipedia,wiki,wk</li>
       <li>duckduckgo.com => duckduckgo,duck,dg</li>
-      <li>🔞🔇jp.pornhub.com => jpporn,jpp,jp</li>
+      <!-- <li>🔞🔇jp.pornhub.com => jpporn,jpp,jp</li>
       <li>🔞🔇cn.pornhub.com => cnporn,cnp,cn</li>
-      <li>🔞🔇www.redtube.com => redtube,red,r</li>
+      <li>🔞🔇www.redtube.com => redtube,red,r</li> -->
       </li>
       <i>(如本站能够完美兼容您想要访问的，不妨联系我添加快捷方式)</i>
       <p id="hideleft">👉隐藏👈</p>
