--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -618,6 +618,7 @@
       <li>网站为沙箱，不保存任何信息</li>
       <li>如果客官有任何问题，请及时与我联系：eschervip#gmail.com</li>
       <li>如果客官手里有闲钱，点击捐赠进行支持，服务器流量快没了啊!!!</li>
+      <li>国内无法访问的网站，直接粘贴到输入框！！！</li>
     </ul>
     <img src="https://raw.minibox.tk/Escher1108/BoxA/gh-pages/assets/ico/apk.png" alt="" srcset="">
     <p>(扫描下载客户端)</p>
