--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -910,7 +910,7 @@
       switch (cmd) {
         case SW_CONF_RETURN:
           conf = msg
-          // showConf()
+          showConf()
           break;
 
         case SW_CONF_CHANGE:
