--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -496,7 +496,7 @@
       left: -120px;
       bottom: 0;
       z-index: 999;
-      option:0.1
+      opacity:0.1
     }
 
     .changenode::after{
@@ -585,6 +585,7 @@
         position: fixed;
         left: -130px;
         bottom: 0;
+	opacity:0.1
       }
 
       .changenode::after {
@@ -636,6 +637,7 @@
         position: fixed;
         left: -130px;
         bottom: 0;
+	opacity:0.1
       }
 
       .changenode::after {
