--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -685,27 +685,26 @@
   <!-- 更新提示 -->
   <div class="alert">
     <ul>
-      <li>此次更新版本为V 1.1.5，添加切换线路功能</li>
+      <li>此次更新版本为V 1.1.5</li>
       <li>网站为沙箱，不保存任何信息</li>
       <li>如果客官有任何问题，请及时与我联系：eschervip#gmail.com</li>
       <li>如果客官手里有闲钱，点击捐赠进行支持，服务器流量快没了啊!!!</li>
-      <li>国内无法访问的网站，直接粘贴到输入框！！！</li>
+      <li>👉<a href="https://hideip.network" target="_blank" rel="noopener noreferrer">要使用YouTube、Netflix等，请点击此处</a></li>
     </ul>
-    <img src="https://raw.minibox.tk/Escher1108/BoxA/gh-pages/assets/ico/apk.png" alt="" srcset="">
-    <p>(扫描下载客户端)</p>
+    <!-- <img src="https://raw.minibox.tk/Escher1108/BoxA/gh-pages/assets/ico/apk.png" alt="" srcset="">
+    <p>(扫描下载客户端)</p> -->
     <p id="djs">60</p>
   </div>
   <div class="alerts" id="left-alert">
     <ol>
       <h3>🐳使用快捷键🐳</h3>
-      <li>www.youtube.com => youtube,yt,y</li>
       <li>www.wikipedia.org => wikipedia,wiki,wk</li>
       <li>duckduckgo.com => duckduckgo,duck,dg</li>
       <!-- <li>🔞🔇jp.pornhub.com => jpporn,jpp,jp</li>
       <li>🔞🔇cn.pornhub.com => cnporn,cnp,cn</li>
       <li>🔞🔇www.redtube.com => redtube,red,r</li> -->
       </li>
-      <i>(如本站能够完美兼容您想要访问的，不妨联系我添加快捷方式)</i>
+      <i>(如本站满足不了你，请点击右侧通道)</i>
       <p id="hideleft">👉隐藏👈</p>
     </ol>
 
@@ -755,7 +754,7 @@
       <a  id="donate" >💰赞助💰</a>
     </div>
     <div class="website">
-      <a href="https://t.me/Jsproxy" target="_blank">📺TG@Jsproxy</a>
+      <a href="https://t.me/hideipnetwork" target="_blank">📺TG@Hide ip</a>
     </div>
   </div>
 
