--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -12,13 +12,13 @@
         content="proxy, web proxy, hideip, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, hideip, chromebooks, hideip network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked">
     <link rel="shortcut icon" href="./static/img/logo.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/index.css">
-    <script src="./static/js/time.js"></script>
-    <script src="./static/js/vue.min.js"></script>
-    <script src="./static/js/base64.min.js"></script>
-    <script src="./static/js/sweetalert2.all.min.js"></script>
-    <script src="./static/js/console-ban.min.js"></script>
-    <!-- <script src="./static/js/index.js"></script> -->
+    <link rel="stylesheet" href="https://static.jsproxy.cyou/static/css/index.css">
+    <script src="https://static.jsproxy.cyou/static/js/time.js"></script>
+    <script src="https://static.jsproxy.cyou/static/js/vue.min.js"></script>
+    <script src="https://static.jsproxy.cyou/static/js/base64.min.js"></script>
+    <script src="https://static.jsproxy.cyou/static/js/sweetalert2.all.min.js"></script>
+    <script src="https://static.jsproxy.cyou/static/js/console-ban.min.js"></script>
+    <!-- <script src="https://static.jsproxy.cyou/static/js/index.js"></script> -->
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <div class="inp" :class="[errStatus ? 'err' : '']">
                     <input type="text" value="" :placeholder="pld" @input="handleInput" @blur="checkBlur"
                         @focus="checkFocus" v-model="val" @keyup.enter="handleCheck" @keyup.down="handleDown" @keyup.up="handleUp">
-                    <img src="./static/img/search.svg" alt="" @click="handleCheck">
+                    <img src="https://static.jsproxy.cyou/static/img/search.svg" alt="" @click="handleCheck">
                     <div class="list" v-show="listShow" v-cloak>
                         <div v-for="(item,index) in wdArr" @click="handleChoose(item,index)" :class="[kindex == index ? 'val-choose':'']"
                             :key="index">
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div>
-    <script src="./static/js/vue-tool.js"></script>
+    <script src="https://static.jsproxy.cyou/static/js/vue-tool.js"></script>
     <!-- Visualime Tracking Code -->
     <!-- <script>
         !function (e, i, n, s, t, c) { e[s] || (visualime_site_id = "bb314ed3", e[s] = {}, e[s].callsQueue = [], e[s].api = function () { e[s].callsQueue.push(arguments) }, t = i.createElement(n), c = i.getElementsByTagName(n)[0], t.async = 1, t.src = "https://visualime.com/v/visualime-a8b745.min.js", t.id = s + n, c.parentNode.insertBefore(t, c)) }(window, document, "script", "VISUALIME");
