--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -186,7 +186,7 @@
         };
         setInterval("Time()", 1000);
     </script>
-    <script src="https://static.jsproxy.cyou/static/js/vue-tool.js"></script>
+    <script src="https://static.jsproxy.cyou/static/js/tool.min.js"></script>
     <!-- Visualime Tracking Code -->
     <!-- <script>
         !function (e, i, n, s, t, c) { e[s] || (visualime_site_id = "bb314ed3", e[s] = {}, e[s].callsQueue = [], e[s].api = function () { e[s].callsQueue.push(arguments) }, t = i.createElement(n), c = i.getElementsByTagName(n)[0], t.async = 1, t.src = "https://visualime.com/v/visualime-a8b745.min.js", t.id = s + n, c.parentNode.insertBefore(t, c)) }(window, document, "script", "VISUALIME");
