--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -115,6 +115,16 @@
         box-shadow: 14px 14px 28px #a13d3e, -14px -14px 28px #ed595a;
       }
     }
+
+    @media screen and (max-width:750px) {
+
+      .input,
+      input {
+        width: 360px;
+        height: 40px;
+        border-radius: 50px;
+      }
+    }
   </style>
 </head>
 
